Further optimize performance: LCP fetchpriority, Unsplash image optimization, reduced quality, and modern browserslist

--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "> 0.5%",
+    "not dead"
+  ]
 }
